Bug 243896 - WebViewImpl::isUsingUISideCompositing() should not rely on there being a DrawingAreaProxy
Summary: WebViewImpl::isUsingUISideCompositing() should not rely on there being a Draw...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: Safari Technology Preview
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Simon Fraser (smfr)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-08-12 13:21 PDT by Simon Fraser (smfr)
Modified: 2022-08-14 21:48 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2022-08-12 13:21:23 PDT
WebViewImpl::isUsingUISideCompositing() gets called before we've created a DrawingAreaProxy, so returns false then. In order to use the new WKScrollView/WKContentView code path, we need it to give an accurate result.
Comment 1 Simon Fraser (smfr) 2022-08-12 13:23:33 PDT
Pull request: https://github.com/WebKit/WebKit/pull/3273
Comment 2 EWS 2022-08-14 21:47:41 PDT
Committed 253417@main (1dfe5d397bd9): <https://commits.webkit.org/253417@main>

Reviewed commits have been landed. Closing PR #3273 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-08-14 21:48:17 PDT
<rdar://problem/98653866>