WebViewImpl::isUsingUISideCompositing() should not rely on there being a DrawingAreaProxy https://bugs.webkit.org/show_bug.cgi?id=243896

Reviewed by Tim Horton.

WebViewImpl::isUsingUISideCompositing() gets called before we've created a DrawingAreaProxy, so
returns false then. In order to use the new WKScrollView/WKContentView code path, we need it to give
an accurate result.

So instead store DrawingAreaType on WebViewImpl, which is initialized by reading from NSUserDefaults
in the constructor.

* Source/WebKit/UIProcess/mac/WebViewImpl.h:
* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::WebViewImpl):
(WebKit::WebViewImpl::createDrawingAreaProxy):
(WebKit::WebViewImpl::isUsingUISideCompositing const):

Canonical link: https://commits.webkit.org/253417@main