Source/WebKit/UIProcess/mac/WebViewImpl.h
@@ -27,6 +27,7 @@
 
 #if PLATFORM(MAC)
 
+#include "DrawingAreaInfo.h"
 #include "ImageAnalysisUtilities.h"
 #include "PDFPluginIdentifier.h"
 #include "ShareableBitmap.h"
@@ -771,6 +772,8 @@ private:
     WeakObjCPtr<NSView<WebViewImplDelegate>> m_view;
     std::unique_ptr<PageClient> m_pageClient;
     Ref<WebPageProxy> m_page;
+
+    DrawingAreaType m_drawingAreaType { DrawingAreaType::TiledCoreAnimation };
 
     bool m_willBecomeFirstResponderAgain { false };
     bool m_inBecomeFirstResponder { false };
